<resources>

    <!-- Titles -->
    <string name="app_name">看路</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">路況回報</string>
    <string name="title_activity_road">68 號道路</string>
    <string name="title_activity_addAccident">新增狀況</string>
    <string name="title_activity_editAccident">編輯狀況</string>
    <string name="title_activity_eventEditor">事件編輯器</string>
    <string name="title_activity_eventEditor_addEvent">新增事件</string>
    <string name="title_activity_eventEditor_editEvent">編輯事件</string>
    <string name="title_activity_imageViewer">圖片檢視器</string>

    <!-- Roadname -->
    <string name="roadName_24">台 24</string>
    <string name="roadName_182">182 縣道</string>
    <string name="roadName_grandma">阿婆灣</string>
    <string name="roadName_24_description">位於屏東霧台鄉</string>
    <string name="roadName_182_description">位於台南高雄交界</string>
    <string name="roadName_grandma_description">位於嘉義中埔鄉</string>

    <!-- Main Activity -->
    <string name="mainActivity_needUpdateMsg">為保證您的正常使用，請立即更新 APP。</string>

    <!-- Home Fragment -->
    <string name="mainFragment_title">全部道路</string>


    <!-- Account Fragment -->
    <string name="accountFrag_title">帳號</string>
    <string name="accountFrag_userNameHolder">未登入</string>
    <string name="accountFrag_accountStatusSignedIn">登出</string>
    <string name="accountFrag_accountStatusSignedOut">登入</string>
    <string name="accountFrag_signOutSuccess">登出成功</string>

    <!-- Settings Fragment -->
    <string name="settingsFrag_title">設定</string>
    <string name="settingsFrag_titleGeneral">一般</string>
    <string name="settingsFrag_titleTheme">主題</string>
    <string name="settingsFrag_titleDialogTheme">選擇主題</string>
    <string name="settingsFrag_titleDefaultFragmentInRoadActivity">預設頁面</string>
    <string name="settingsFrag_titleDialogDefaultFragmentInRoadActivity">預設進入的頁面</string>
    <string name="settingsFrag_titleAbout">關於</string>
    <string name="settingsFrag_titleAds">廣告</string>
    <string name="settingsFrag_titleTermsOfService">服務條款</string>
    <string name="settingsFrag_titlePrivacyPolicy">隱私權政策</string>
    <string name="settingsFrag_titleLicense">版權聲明</string>

    <!-- RoadActivity -->
    <string name="roadActivity_tab_accidentEvent">路況</string>
    <string name="roadActivity_tab_weather">天氣</string>
    <string name="roadActivity_tab_liveCam">即時影像</string>
    <string name="roadActivity_tab_localStore">店家資訊</string>
    <string name="roadActivity_tab_account">帳號</string>

    <!-- Road Event Fragment -->
    <string name="roadFrag_fabText">新增事件</string>
    <string name="roadFrag_SignInFirst">請先登入</string>
    <string name="roadFrag_noEventAtAll">風和日麗 :D</string>
    <string name="roadFrag_moreOnClick_title">你想做什麼?</string>
    <string name="roadFrag_moreOnClick_messageSituation1">選擇一個動作，或者當沒事</string>
    <string name="roadFrag_moreOnClick_messageSituation2">檢舉功能尚未開發。</string>
    <string name="roadFrag_moreOnClick_editEvent">編輯事件</string>
    <string name="roadFrag_moreOnClick_deleteEvent">刪除</string>
    <string name="roadFrag_moreOnClick_deleteEventConfirm">確認要刪除該事件?</string>
    <string name="roadFrag_moreOnClick_doNothing">什麼也不做</string>
    <string name="roadFrag_moreOnClick_reportEvent">檢舉</string>
    <string name="roadFrag_addAccidentEvent">新增事件</string>
    <string name="roadFrag_deleteSuccess">刪除成功</string>
    <string name="roadFrag_deleteFailed">刪除失敗</string>
    <string name="roadFrag_notSignInOrNotPostByYou">未登入或非你發布</string>

    <!-- Weather Fragment -->
    <string name="weatherFrag_temp">溫度</string>
    <string name="weatherFrag_min10">10 分鐘雨量</string>
    <string name="weatherFrag_valueDescription">
        數值來源為中央氣象局放置於各地的自動氣象站，本頁擷取鄰近於該道路之氣象站資訊。\n\n數值含意：\n-998.00：表示過去六小時內無降雨\n0.00 或以上：過去 10 分鐘內降雨量
    </string>

    <!-- Live Cam Fragment -->
    <string name="liveCamFrag_noCamSelectTitleHolder">請選擇攝影機</string>
    <string name="liveCamFrag_valueDescription">
        影像來源為公路總局及各地方政府提供，本頁擷取該道路可用之監視器畫面，這些攝影機不是我們架設的。\n\n畫面全黑：通常代表攝影機維修中。\n畫面卡住：因影像格式問題，30 秒即會卡住，選擇其他攝影機再回來即可解決。
    </string>

    <!-- Local Store Fragment -->
    <string name="localStoreFrag_placeHolder">開發中，以後這一頁會有當地店家資訊</string>

    <!-- Event Editor Fragment -->
    <string name="eventEditor_sendingData">請稍後&#8230;</string>
    <string name="eventEditor_eventAddUpdateFailure">好像出了點問題，請稍後再試</string>
    <string name="eventEditor_locationGeoPointSelected">座標點已選擇，按 X 可移除</string>
    <string name="eventEditor_exitConfirmDialogTitle">確定離開此頁面?</string>
    <string name="eventEditor_exitConfirmDialogMsg">您所輸入的資訊將「不會」被儲存</string>

    <!-- Maps Fragment-->
    <string name="mapsFrag_titleSelectLocation">選擇座標</string>
    <string name="mapsFrag_titleShowLocation">事件地點</string>
    <string name="mapsFrag_toMyLocation">我的位置</string>
    <string name="mapsFrag_howToSelect">在地圖上長按以選擇位置</string>
    <string name="mapsFrag_notSelect">地點未選</string>
    <string name="mapsFrag_justSelect">剛選的地點</string>


    <!-- Accident Event Activity Text -->
    <string name="accidentEvent_currentRoad">目前所在路段</string>
    <string name="accidentEvent_situationType">事件種類</string>
    <string name="accidentEvent_situationType_0">按我選擇種類</string>
    <string name="accidentEvent_situationType_1">事故</string>
    <string name="accidentEvent_situationType_2">注意</string>
    <string name="accidentEvent_situationType_3">臨檢</string>
    <string name="accidentEvent_situationType_4">測速</string>
    <string name="accidentEvent_situationType_5">天氣</string>
    <string name="accidentEvent_situationType_6">其他</string>
    <string name="accidentEvent_situationType_7">坍方</string>
    <string name="accidentEvent_situationType_8">落石</string>
    <string name="accidentEvent_location">地點</string>
    <string name="accidentEvent_locationHint">明顯地標或公里數</string>
    <string name="accidentEvent_situation">狀況</string>
    <string name="accidentEvent_situationHint">簡短描述你眼前發生之狀況</string>
    <string name="accidentEvent_imageTitle">圖片 - 選擇性</string>
    <string name="accidentEvent_uploadImageTitle">上傳圖片</string>
    <string name="accidentEvent_removeUploadImageTitle">移除圖片</string>
    <string name="accidentEvent_imageUploadFail_timeout">上傳逾時，請在網路良好的狀況下上傳</string>
    <string name="accidentEvent_imageUploadFail_IO">上傳失敗，偵測不到網路</string>
    <string name="accidentEvent_imageUploadFail_server">上傳失敗，伺服器錯誤</string>
    <string name="accidentEvent_imageUploadFail_errorCode">錯誤代碼</string>
    <string name="accidentEvent_imageUploadFail_unknown">未知錯誤</string>
    <string name="accidentEvent_addSuccess">新增成功</string>
    <string name="accidentEvent_addFailed">新增失敗</string>
    <string name="accidentEvent_addConfirm">確認要新增事件?</string>
    <string name="accidentEvent_editSuccess">更新成功</string>
    <string name="accidentEvent_editFailed">更新失敗</string>
    <string name="accidentEvent_editConfirm">確認要更新事件?</string>
    <string name="accidentEvent_NoEntry">有欄位未填寫</string>
    <string name="accidentEvent_dontDoubleClick">短時間內請勿重複點擊</string>


    <!-- Common -->
    <string name="all_unknownError">未知錯誤</string>
    <string name="all_done">完成</string>
    <string name="all_confirm">確認</string>
    <string name="all_cancel">取消</string>
    <string name="all_success">成功</string>
    <string name="all_failed">失敗</string>
    <string name="all_nope">不要</string>
    <string name="all_notSignedIn">尚未登入</string>
    <string name="all_noNetworkConn">網路未連線</string>
    <string name="all_noFirebaseConn">無法連線到資料庫</string>
    <string name="roadFrag_notDevelopYet">此功能尚未開發</string>

</resources>
