<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="一般">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settingsFrag_titleDialogTheme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/settingsFrag_titleTheme"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/settingsFrag_titleDialogDefaultFragmentInRoadActivity"
            android:entries="@array/defaultFragmentInRoadActivity_entries"
            android:entryValues="@array/defaultFragmentInRoadActivity_values"
            android:key="defaultFragmentInRoadActivity"
            android:title="@string/settingsFrag_titleDefaultFragmentInRoadActivity"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="關於">

        <Preference
            android:key="ads"
            android:title="@string/settingsFrag_titleAds"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="tos"
            android:title="@string/settingsFrag_titleTermsOfService"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pp"
            android:title="@string/settingsFrag_titlePrivacyPolicy"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="license"
            android:title="@string/settingsFrag_titleLicense"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="about"
            android:title="@string/settingsFrag_titleAbout"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>