<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.txwstudio.app.roadreport.ui.home.HomeFragment"
        android:label="@string/mainFragment_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.txwstudio.app.roadreport.ui.account.AccountFragment"
        android:label="@string/accountFrag_title"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.txwstudio.app.roadreport.SettingsFragment"
        android:label="@string/settingsFrag_title" />
</navigation>