<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="accidentModel"
            type="com.txwstudio.app.roadreport.model.Accident" />

        <variable
            name="viewModel"
            type="com.txwstudio.app.roadreport.ui.eventeditor.EventEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.txwstudio.app.roadreport.activity.AccidentEventActivity">

        <ProgressBar
            android:id="@+id/progressbar_eventEditor_sendProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_half"
            android:indeterminateOnly="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressbar_eventEditor_sendProgress">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/all_default_margin">

                <!-- Current Road -->
                <TextView
                    android:id="@+id/textView_eventEditor_currentRoadTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_currentRoad" />

                <TextView
                    android:id="@+id/textView_eventEditor_currentRoadContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:padding="@dimen/all_default_margin"
                    android:text="@{viewModel.roadName}"
                    android:textColor="?attr/whiteOrBlack"
                    android:textSize="18sp"
                    tools:text="台 24" />


                <!-- Situation Type -->
                <TextView
                    android:id="@+id/textView_eventEditor_situationTypeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_situationType" />

                <TextView
                    android:id="@+id/editText_eventEditor_situationTypeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{clickListener}"
                    android:padding="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_situationType_0"
                    android:textColor="?attr/whiteOrBlack"
                    android:textSize="18sp" />


                <!-- Location -->
                <TextView
                    android:id="@+id/textView_eventEditor_locationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_location" />

                <EditText
                    android:id="@+id/editText_eventEditor_locationContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/accidentEvent_locationHint"
                    android:inputType="text"
                    android:padding="@dimen/all_default_margin"
                    android:text="@={viewModel.location}" />


                <!-- Situation -->
                <TextView
                    android:id="@+id/textView_eventEditor_situationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_situation" />

                <EditText
                    android:id="@+id/editText_eventEditor_situationContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/all_default_margin"
                    android:background="@drawable/bg_edittext"
                    android:gravity="top|start"
                    android:hint="@string/accidentEvent_situationHint"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:padding="@dimen/all_default_margin"
                    android:scrollbars="vertical"
                    android:text="@={viewModel.situation}" />

                <!-- Image -->
                <TextView
                    android:id="@+id/textView_eventEditor_imageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_default_margin"
                    android:text="@string/accidentEvent_imageTitle" />

                <ProgressBar
                    android:id="@+id/progressbar_eventEditor_imageProgress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:indeterminateOnly="true"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView_eventEditor_imageViewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:errors="@{@drawable/bg_image_holder}"
                    app:imageUrls="@{viewModel.imageUrl}"
                    app:placeHolders="@{@drawable/bg_image_holder}" />

                <TextView
                    android:id="@+id/button_eventEditor_uploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_default_margin"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:background="@drawable/bg_upload_image_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.uploadImageClicked()}"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/accidentEvent_uploadImageTitle"
                    android:textColor="@color/white" />
            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>