<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_road_toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_main"
            android:textColor="?attr/activityTitleTextColor"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="156dp"
            tools:layout_editor_absoluteY="6dp" />

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_1"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#F573A0"
        app:layout_constraintEnd_toStartOf="@id/card_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/roadName_24"
            android:textColor="?attr/roadCard_TextColor"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end|center"
            android:layout_margin="@dimen/all_default_margin"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_flower_459dp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_2"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#1E88E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/card_1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/roadName_182"
            android:textColor="?attr/roadCard_TextColor"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end|center"
            android:layout_margin="@dimen/all_default_margin"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_bucket_512dp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>